# GhrammR_the-janitor

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  action.yml  flake.nix  gauntlet_targets.txt  godot_live_pr_audit.md  janitor.toml  justfile  mkdocs.yml  nixpkgs_full_audit.csv  rust-toolchain.toml
.github/workflows/: codeql.yml  dependency-review.yml  deploy_docs.yml  janitor-pr-gate.yml  msrv.yml  scorecard.yml
crates/anatomist/: Cargo.toml
crates/anatomist/src/: graph.rs  manifest.rs  parser.rs  pipeline.rs  scan.rs  wisdom.rs
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  export.rs  git_drive.rs  main.rs  report.rs
crates/common/: Cargo.toml
crates/common/src/: deps.rs  lib.rs  policy.rs
crates/dashboard/: Cargo.toml
crates/experimental/backlog_pruner/: Cargo.toml
crates/experimental/backlog_pruner/src/: ghost_collision.rs  lib.rs  semantic_null.rs  unwired_island.rs
crates/experimental/backlog_pruner/tests/: pruner_isolation.rs
crates/forge/: Cargo.toml
crates/polyglot/: Cargo.toml
docs/: benchmarks.md  index.md  infrastructure.md  licensing.md  pricing.md  privacy.md  safety.md  security.md  slop-hunter.md  terms.md  ultimate_gauntlet_results.md
docs/archive/: legacy.md
docs/case-studies/: global-audit-2026.md  godot.md
docs/sovereignty/: tokens.md
overrides/: main.html
tools/: audit_real_prs.sh  generate_client_package.sh  grand_slam.sh  ultimate_gauntlet.sh
tools/gauntlet-runner/: Cargo.toml
tools/parallel-bounce/: Cargo.toml
tools/parallel-bounce/src/: main.rs
tools/templates/: report.tex
(+16 files in other folders)
