[package]
name        = "parallel-bounce"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "parallel-bounce"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde  = { workspace = true, features = ["derive"] }
serde_json = "1"
rayon  = "1"
